# enforce-script-lsp

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: lexer.rs  lsp.rs  main.rs  parser.rs  semantic.rs
src/utils/: diagnostics.rs  error.rs  mod.rs  position.rs
