[package]
name = "enforce-script-lsp"
description = "Language Server Protocol implementation for Enforce Script"
homepage = "https://devz-tools.github.io/"
repository = "https://github.com/devz-tools/enforce-script-lsp"
readme = "README.md"
keywords = ["lsp", "language-server", "enforce-script", "arma", "dayz"]
categories = ["development-tools", "development-tools::debugging", "api-bindings", "compilers", "parser-implementations"]
version = "0.1.2"
edition = "2024"
license = "GPL-3.0"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
regex = "1.10"
